objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Call_Attempt_Result__c</fullName>
        <label>Call Attempt Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Attempt Success</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Call Attempt Failed</fullName>
                </value>
                <value>
                    <fullName>Call Attempts Limit Reached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Donation</fullName>
                </value>
                <value>
                    <fullName>One-Off Donation</fullName>
                </value>
                <value>
                    <fullName>Not Decided</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Welcomed</fullName>
                </value>
                <value>
                    <fullName>Call Later</fullName>
                </value>
                <value>
                    <fullName>Donor Already</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Regular Renewal</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Call Later Limit Reached</fullName>
                </value>
                <value>
                    <fullName>Re-Welcomed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Reject_Reason_Description__c</fullName>
        <label>Reject Reason - Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No money</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t send emails</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t call</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t send emails &amp; Don&apos;t call</fullName>
                </value>
                <value>
                    <fullName>Other reason</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t want to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__TLF_Agent__c</fullName>
        <label>TLF Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jméno agenta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__TLF_Attempt_Date__c</fullName>
        <label>TLF Attempt Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__TLF_Last_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TLF Last Attempt</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable__c</fullName>
        <label>Variable</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>